# Robotic-Template-Library

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Doxyfile  Licence.txt  README.md  Readme.md  _approximation_tls_line2_d_8h.html  _approximation_tls_line2_d_8h_source.html  _approximation_tls_line3_d_8h.html  _approximation_tls_line3_d_8h_source.html  _approximation_tls_plane3_d_8h.html  _approximation_tls_plane3_d_8h_source.html  _bounding_box_n_d_8h.html  _bounding_box_n_d_8h_source.html  _c_a_r___segmenter_8h.html  _c_a_r___segmenter_8h_source.html  _constants_8h.html  _constants_8h.js  _constants_8h_source.html  _core_8h.html  _core_8h.js  _core_8h_source.html  _extractor_chain_fast_8h.html  _extractor_chain_fast_8h_source.html  _extractor_chain_incremental_8h.html  _extractor_chain_incremental_8h_source.html  _frustum3_d_8h.html  _frustum3_d_8h_source.html  _general_tf_8h.html  _general_tf_8h_source.html  _i_a___segmenter_8h.html  _i_a___segmenter_8h_source.html  _la_te_x_doc_8h.html  _la_te_x_doc_8h_source.html  _la_te_x_table_8h.html  _la_te_x_table_8h_source.html  _la_te_x_tikz2_d_8h.html  _la_te_x_tikz2_d_8h_source.html  (+533 more)
.circleci/: config.yml  install_gtest.sh
.github/workflows/: ci.yml  ubuntu-20-04.yml
examples/: CMakeLists.txt  e_bounding_box.cpp  e_genetic_algorithm.cpp  e_kalman_filter.cpp  e_latexexport.cpp  e_matrix.cpp  e_munkres.cpp  e_occupancymap.cpp  e_particle_filter.cpp  e_quaternion.cpp  e_tf_tree.cpp  e_transformations.cpp  e_vectors.cpp
include/rtl/: Algorithms.h  Core.h  Test.h  Transformation.h  Unstable.h  Vectorization.h
include/rtl/alg/astar/: AStar.h
include/rtl/alg/genetic/: GeneticAlgorithm.h  SimpleAgent.h
include/rtl/alg/kalman/: Kalman.h
include/rtl/alg/munkres/: Munkres.h  munkres.h
include/rtl/alg/particle_filter/: ParticleFilter.h  SimpleParticle.h
include/rtl/alg/path_finding/: AStar.h  AStarCell.h  Dijkstra.h  DijkstraCell.h  OccupancyMapPathFinder.h  PathFinderNode.h
include/rtl/core/: BoundingBoxND.h  Constants.h  Frustum3D.h  GraphMap.h  LineSegmentND.h  Matrix.h  OccupancyMapND.h  Polygon2D.h  Polygon3D.h  Quaternion.h  TypeTraits.h  Utility.h  VectorND.h
include/rtl/io/: LaTeXDoc.h  LaTeXTable.h  LaTeXTikz2D.h  LaTeXTikz3D.h  LaTeXUtility.h  StdLib.h
include/rtl/seg/: CAR_Segmenter.h  IA_Segmenter.h
include/rtl/test/: Random.h  TemplateTester.h  TypeDetails.h
include/rtl/tf/: GeneralTf.h  RigidTfND.h  RotationND.h  TfChain.h  TfTree.h  TfTreeNode.h  Transformation2D.h  Transformation3D.h  TranslationND.h  VariantResult.h
include/rtl/unstable/: AStar.h  AStarCell.h  OccupancyMapND.h
include/rtl/vect/: ApproximationTlsLine2D.h  ApproximationTlsLine3D.h  ApproximationTlsPlane3D.h  ExtractorChainFast.h  ExtractorChainIncremental.h  OptimizerContinuity2D.h  OptimizerTotalError.h  PostprocessorPolyline2D.h  PostprocessorProjectEndpoints.h  PrecArray.h  PrecSums.h  VectorizerPointElimination.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+84 more)
src/: LaTeXTikz2D.cpp  LaTeXTikz3D.cpp
test/: CMakeLists.txt  t_boundingbox.cpp  t_frustum.cpp  t_genetic_algorithm.cpp  t_io_stdlib.cpp  t_latexexport.cpp  t_linesegmentxx.cpp  t_matrix.cpp  t_munkres.cpp  t_particle_filter.cpp  t_quaternion.cpp  t_segmentation.cpp  t_transformationxx.cpp  t_type_traits.cpp  t_vectorization.cpp  t_vectorxx.cpp
test/alg/: t_astar.cpp  t_genetic_algorithm.cpp  t_kalman.cpp  t_munkres.cpp
test/core/: t_boundingbox.cpp  t_occupancymap.cpp  t_quaternion.cpp
test/tf/: t_tf_chain.cpp  t_tf_general_tf.cpp  t_tf_management.cpp  t_tf_tree.cpp  t_tf_tree_node.cpp  t_transformationxx.cpp
test/tf/tf_test/: key_generator.h  tf_comparison.h
test/unstable/: t_astar.cpp  t_occupancymap.cpp
